--- a/08.01-Dynamic-Blocks.MD
+++ b/08.01-Dynamic-Blocks.MD
@@ -1,6 +1,6 @@
 ## 📚 **Terraform Dynamic Blocks**
 
-### **Purpose**: 
+### **Purpose**:
 Dynamic blocks allow you to construct **repeatable, nested configuration blocks** inside Terraform resources or other configuration blocks. This helps you handle scenarios where a block may need to be repeated for each element of a collection (such as a list or map) while keeping the code clean and maintainable.
 
 ---
@@ -17,7 +17,7 @@ This means you can use dynamic blocks to manage configurations for resources, da
 
 ---
 
-### **Usage**: 
+### **Usage**:
 Dynamic blocks allow you to generate multiple nested configuration blocks dynamically based on a variable, list, or map. This reduces redundancy and keeps the code DRY (Don't Repeat Yourself). The idea is that for each element in the input collection, a corresponding block is generated inside the resource or data block.
 
 ---
@@ -86,7 +86,7 @@ Let’s say you want to define multiple providers dynamically based on different
 ```hcl
 variable "providers_config" {
   type = list(object({
-    name = string
+    name   = string
     region = string
   }))
   default = [
@@ -102,60 +102,62 @@ provider "aws" {
 }
 ```
 
-In this case:
-- The `dynamic` block is **not used directly** but we use `for_each` within the provider block itself to dynamically create multiple provider configurations.
-- This method creates an AWS provider for each region (in `us-east-1` and `us-west-2`).
+> ℹ️ **Note:** Provider blocks don't support `dynamic` blocks directly — instead, we use `for_each` at the top level to create multiple instances of a provider.
 
 ---
 
-### **Example 3: Dynamic Blocks for `tags` in a `resource`**
+### **Example 3: Tags — Use Maps Instead of Dynamic Blocks**
 
-If you want to create dynamic `tags` for an AWS resource:
+Terraform AWS providers expect `tags` as a **map**, so using `dynamic` for `tags` usually isn’t necessary — and actually won’t work in most AWS resources.
 
-#### Example:
+#### ❌ **Incorrect or Unnecessary Use:**
+```hcl
+dynamic "tags" {
+  for_each = var.tags_map
+  content {
+    key   = each.key
+    value = each.value
+  }
+}
+```
+This **won’t work** because `tags` expects a map, not a nested block.
 
+#### ✅ **Correct Use:**
 ```hcl
 variable "tags_map" {
   type = map(string)
   default = {
-    Name = "Example Instance"
+    Name        = "Example Instance"
     Environment = "Development"
-    Project = "Terraform"
+    Project     = "Terraform"
   }
 }
 
 resource "aws_instance" "example" {
   ami           = "ami-0c55b159cbfafe1f0"
   instance_type = "t2.micro"
-
-  dynamic "tags" {
-    for_each = var.tags_map
-    content {
-      key   = each.key
-      value = each.value
-    }
-  }
+  tags          = var.tags_map
 }
 ```
-
-In this example:
-- The `tags` block is dynamically created for each key-value pair in `tags_map`.
-- `each.key` and `each.value` are used to refer to the individual key and value of the tags.
-
-This results in multiple tags being assigned to the EC2 instance.
+Use `tags = var.tags_map` directly.
 
 ---
 
-### **Caution: Overuse of Dynamic Blocks**
+### 💡 When to Use Dynamic Blocks
 
-While dynamic blocks help in reducing code duplication, **overusing** them can lead to:
-- **Complexity**: The code can become difficult to read, especially if it’s overused in a large module.
-- **Maintainability**: Complex dynamic blocks can make debugging and managing code harder.
-
-It's important to strike a balance between reusability and simplicity. Use dynamic blocks for scenarios where it genuinely makes the code cleaner or more flexible. For simpler, static configurations, avoid unnecessary dynamic blocks.
+| Use Case                              | Use Dynamic Block? | Notes                                           |
+|--------------------------------------|--------------------|-------------------------------------------------|
+| Repeating `ingress` rules            | ✅ Yes           | Ideal scenario for `dynamic`                   |
+| Repeating `ebs_block_device`         | ✅ Yes           | Clean and modular                              |
+| Setting `tags` in AWS                | ❌ No            | Use plain `map`                                |
+| Creating multiple `provider` blocks  | ❌ No            | Use `for_each` at the provider block level     |
+| Static, one-off nested configuration | ❌ No            | Simpler and more readable to write directly    |
 
 ---
 
-### **Summary of Use Cases**:
-- **Use dynamic blocks** when you need to repeat the same nested block for multiple values, especially when the number of blocks is determined by a list or map.
-- **Avoid dynamic blocks** for simple, static configurations to maintain readability.
+### ✅ TL;DR Final Thoughts
+
+- ✅ Use `dynamic` when a **block is repeatable** and driven by a list or map.
+- ❌ Don’t use `dynamic` for things like `tags` where a **map** is expected.
+- 🪜 Avoid overuse. Use it only when it improves flexibility and cleanliness.
+- 🧹 Prioritize readability — it’s okay to duplicate lines if it avoids complex logic.
