--- a/08.02-Dynamic-Blocks-Exam.MD
+++ b/08.02-Dynamic-Blocks-Exam.MD
@@ -1,212 +1,147 @@
-### 1. What does a Terraform module do?
-A) It defines a single resource  
-B) It defines multiple resources that are used together  
-C) It stores variables  
-D) It stores output values  
+### ✅ **Multiple Choice (1–15)**
 
-### 2. How do you define a variable in Terraform?
-A) `variable "name" {}`  
-B) `var "name" {}`  
-C) `define "name" {}`  
-D) `resource "name" {}`  
+1. **What is the purpose of a dynamic block in Terraform?**  
+   a) To declare new modules  
+   b) To generate nested blocks dynamically  
+   c) To create static configuration  
+   d) To manage backends
 
-### 3. What is the default state file name in Terraform?
-A) `terraform_plan.tfstate`  
-B) `terraform_config.tfstate`  
-C) `terraform.tfstate`  
-D) `state.tfstate`  
+2. **Which keyword is used to define the inner structure of a dynamic block?**  
+   a) `loop`  
+   b) `repeat`  
+   c) `content`  
+   d) `nested`
 
-### 4. What does the `terraform apply` command do?
-A) It shows the execution plan  
-B) It initializes the Terraform working directory  
-C) It applies changes to your infrastructure  
-D) It checks for syntax errors  
+3. **What is required for a dynamic block to iterate over?**  
+   a) A boolean  
+   b) A string  
+   c) A collection  
+   d) A number
 
-### 5. How can you retrieve the current state of infrastructure in Terraform?
-A) `terraform refresh`  
-B) `terraform state show`  
-C) `terraform state list`  
-D) `terraform plan`  
+4. **In a dynamic block, what does `each.value` represent?**  
+   a) The loop counter  
+   b) The current value in the iteration  
+   c) The entire list  
+   d) The last element of the list
 
-### 6. Which of the following can be used to define the type of a variable in Terraform?
-A) `type = string`  
-B) `type = var.string`  
-C) `variable_type = "string"`  
-D) `data_type = string`  
+5. **Where can you use dynamic blocks?**  
+   a) Only inside `resource` blocks  
+   b) Only inside `module` blocks  
+   c) Inside several block types like `resource`, `data`, `provisioner`  
+   d) Only with `variable` definitions
 
-### 7. How do you define an output variable in Terraform?
-A) `output "name" {}`  
-B) `output variable_name {}`  
-C) `variable "name" {}`  
-D) `result "name" {}`  
+6. **What happens if the collection passed to `for_each` in a dynamic block is empty?**  
+   a) It creates an empty block  
+   b) It throws an error  
+   c) It skips generating the block  
+   d) It creates one block with default values
 
-### 8. What command is used to initialize a new Terraform configuration?
-A) `terraform start`  
-B) `terraform init`  
-C) `terraform configure`  
-D) `terraform setup`  
+7. **What is the correct keyword to repeat nested blocks in a `resource` block?**  
+   a) `foreach`  
+   b) `dynamic`  
+   c) `iterate`  
+   d) `repeat`
 
-### 9. What is the main purpose of Terraform's `provider` block?
-A) To define infrastructure resources  
-B) To define how Terraform interacts with an external service  
-C) To define outputs  
-D) To define variables  
+8. **Can you use dynamic blocks for `tags` in AWS resources?**  
+   a) Yes  
+   b) No  
+   c) Only with EC2  
+   d) Only with maps
 
-### 10. Which block is used to dynamically repeat a nested configuration in Terraform?
-A) `dynamic` block  
-B) `repeat` block  
-C) `foreach` block  
-D) `for_each` block  
+9. **How do you access the key inside a `for_each` loop in a dynamic block iterating over a map?**  
+   a) `key`  
+   b) `value.key`  
+   c) `each.key`  
+   d) `item.key`
 
-### 11. How do you specify the region for an AWS provider in Terraform?
-A) `region = "us-west-1"`  
-B) `provider "aws" { region = "us-west-1" }`  
-C) `aws_region = "us-west-1"`  
-D) `aws = "region"`  
+10. **Which of the following is **not** a valid use case for dynamic blocks?**  
+    a) Repeating `ingress` rules in a security group  
+    b) Repeating `tags` in an EC2 instance  
+    c) Repeating `output` values  
+    d) Repeating `provisioner` blocks
 
-### 12. Which of the following can be used for defining a map in Terraform?
-A) `map(string)`  
-B) `list(string)`  
-C) `tuple(string)`  
-D) `object(string)`  
+11. **Which of the following is a valid expression inside a dynamic block’s `for_each`?**  
+    a) `count.index`  
+    b) `"loop"`  
+    c) `var.list_of_ports`  
+    d) `lookup(var, "list")`
 
-### 13. What does `terraform destroy` do?
-A) It deletes the configuration files  
-B) It destroys the infrastructure  
-C) It updates the infrastructure  
-D) It removes variables  
+12. **Which scope is `each.value` valid in?**  
+    a) Global scope  
+    b) Inside the `for_each` expression  
+    c) Inside the `content` block  
+    d) Outside of the dynamic block
 
-### 14. How do you specify a default value for a variable in Terraform?
-A) `default = "value"`  
-B) `value = "default"`  
-C) `value: "default"`  
-D) `default_value = "value"`  
+13. **True or False:** Dynamic blocks must always generate at least one nested block.
 
-### 15. What is the command to validate a Terraform configuration?
-A) `terraform check`  
-B) `terraform validate`  
-C) `terraform plan`  
-D) `terraform verify`  
+14. **Which block would typically use a dynamic block to generate multiple IP rules?**  
+    a) `aws_instance`  
+    b) `aws_security_group`  
+    c) `aws_iam_role`  
+    d) `aws_s3_bucket`
 
-### 16. What is the purpose of the `count` parameter in a resource block?
-A) To create multiple instances of the same resource  
-B) To set the count of instances to 1  
-C) To define the resource’s dependency  
-D) To specify the resource's region  
+15. **Dynamic blocks are most useful for:**  
+    a) Static infrastructure  
+    b) Infrastructure that changes based on input variables  
+    c) Debugging  
+    d) Hardcoding values
 
-### 17. What does the `terraform plan` command do?
-A) It shows the current state of your infrastructure  
-B) It applies changes to your infrastructure  
-C) It shows the changes Terraform will make to your infrastructure  
-D) It validates the configuration files  
+---
 
-### 18. How do you set a variable to be sensitive in Terraform?
-A) `sensitive = true` in the variable block  
-B) `type = sensitive`  
-C) `secret = true` in the output block  
-D) `sensitive_output = true`  
+### ✍️ **Short Answer (16–25)**
 
-### 19. Which of the following is NOT a valid Terraform resource type?
-A) `aws_instance`  
-B) `google_compute_instance`  
-C) `azure_virtual_machine`  
-D) `custom_resource`  
+16. **Write the keyword used to define a dynamic block.**  
+17. **What are the three required components of a dynamic block?**  
+18. **Give an example resource type where a dynamic `ingress` block is useful.**  
+19. **What type must the value passed to `for_each` be?**  
+20. **What does `content` define in a dynamic block?**  
+21. **Can dynamic blocks be nested within other dynamic blocks? (Yes/No)**  
+22. **What function would you use to create a map for `for_each` from a list with keys?**  
+23. **Name a drawback of using too many dynamic blocks in your code.**  
+24. **What keyword replaces the repeated block name in a dynamic block?**  
+25. **What does `each.key` refer to in a dynamic block iterating over a map?**
 
-### 20. What type of file is used for the Terraform configuration?
-A) `.json`  
-B) `.hcl`  
-C) `.yaml`  
-D) `.tf`  
+---
 
-### 21. How can you pass a variable to a Terraform module?
-A) `module "name" { value = "some_value" }`  
-B) `module "name" { input = "some_value" }`  
-C) `module "name" { variable = "some_value" }`  
-D) `module "name" { input_variable = "some_value" }`  
+### 🤔 **True/False (26–30)**
 
-### 22. Which block type is used for defining input variables in Terraform?
-A) `input`  
-B) `variable`  
-C) `params`  
-D) `input_variable`  
+26. **True/False:** Dynamic blocks can be used in provider blocks.  
+27. **True/False:** You can use `for` loops inside `content {}`.  
+28. **True/False:** Using `dynamic` blocks in simple, static configurations is encouraged.  
+29. **True/False:** `for_each` in a dynamic block accepts both lists and maps.  
+30. **True/False:** Dynamic blocks are available in all versions of Terraform.
 
-### 23. How can you output the value of a resource after creation in Terraform?
-A) Using the `output` block  
-B) Using the `result` block  
-C) Using the `print` function  
-D) Using the `echo` command  
+---
 
-### 24. Which of the following is the correct way to reference a resource’s attribute in Terraform?
-A) `resource_name.attribute`  
-B) `resource["attribute"]`  
-C) `resource.attribute_name`  
-D) `resource -> attribute`  
-
-### 25. How do you reference an output value from another Terraform configuration?
-A) `terraform_remote_state` data source  
-B) `output("value_name")`  
-C) `var.value_name`  
-D) `terraform_state("value_name")`  
-
-### 26. What does the `for_each` parameter do in Terraform?
-A) It defines the number of instances of a resource  
-B) It iterates over a collection to create resources dynamically  
-C) It creates a dependency between resources  
-D) It sets the region of a resource  
-
-### 27. Which type of Terraform block can you use to execute commands locally on the machine running Terraform?
-A) `local-exec`  
-B) `remote-exec`  
-C) `exec`  
-D) `command-exec`  
-
-### 28. Which of the following can be used to store state information for Terraform?
-A) `.tfstate` file  
-B) `.plan` file  
-C) `.json` file  
-D) `.config` file  
-
-### 29. What is the purpose of the `depends_on` argument in Terraform?
-A) It sets a priority for resource creation  
-B) It defines the order in which resources are destroyed  
-C) It creates a dependency between resources  
-D) It defines resource attributes  
-
-### 30. How do you create a resource in Terraform with a specific region?
-A) `region = "us-west-2"`  
-B) `provider = aws region = "us-west-2"`  
-C) `resource "aws_instance" { region = "us-west-2" }`  
-D) `resource "aws_instance" { region: "us-west-2" }`  
-
-| **Question Number** | **Answer** | **Explanation**                                                                 |
-|---------------------|------------|---------------------------------------------------------------------------------|
-| 1                   | B) It defines multiple resources that are used together | Modules group resources together to reuse in multiple places.                |
-| 2                   | A) `variable "name" {}`  | The correct syntax for defining variables in Terraform.                        |
-| 3                   | C) `terraform.tfstate` | The default state file name used by Terraform to store the current state of infrastructure. |
-| 4                   | C) It applies changes to your infrastructure | `terraform apply` applies the planned changes to the infrastructure. |
-| 5                   | A) `terraform refresh` | This command syncs the Terraform state with the infrastructure. |
-| 6                   | A) `type = string` | Correct syntax to define the type of a variable in Terraform. |
-| 7                   | A) `output "name" {}` | Correct syntax to define an output variable in Terraform. |
-| 8                   | B) `terraform init` | Initializes the Terraform working directory. |
-| 9                   | B) To define how Terraform interacts with an external service | The provider block defines how Terraform interacts with cloud providers and other services. |
-| 10                  | A) `dynamic` block | Dynamic blocks are used to generate repeated nested blocks dynamically. |
-| 11                  | B) `provider "aws" { region = "us-west-1" }` | This defines the AWS provider with the specified region. |
-| 12                  | A) `map(string)` | This defines a map where each key has a string value. |
-| 13                  | B) It destroys the infrastructure | `terraform destroy` removes the infrastructure. |
-| 14                  | A) `default = "value"` | Sets a default value for a variable in Terraform. |
-| 15                  | B) `terraform validate` | Validates the Terraform configuration. |
-| 16                  | A) To create multiple instances of the same resource | The `count` parameter is used to create multiple instances of a resource. |
-| 17                  | C) It shows the changes Terraform will make to your infrastructure | `terraform plan` previews the changes before applying them. |
-| 18                  | A) `sensitive = true` in the variable block | Makes the variable sensitive, ensuring it is not exposed in the state file. |
-| 19                  | D) `custom_resource` | `custom_resource` is not a valid Terraform resource. |
-| 20                  | D) `.tf` | Terraform configuration files use the `.tf` extension. |
-| 21                  | A) `module "name" { value = "some_value" }` | This is the correct syntax for passing values to a module. |
-| 22                  | B) `variable` | The `variable` block is used to define input variables in Terraform. |
-| 23                  | A) Using the `output` block | Use the `output` block to display values after the resource is created. |
-| 24                  | A) `resource_name.attribute` | This is how you reference a resource’s attribute in Terraform. |
-| 25                  | A) `terraform_remote_state` data source | This is used to reference outputs from another configuration. |
-| 26                  | B) It iterates over a collection to create resources dynamically | `for_each` helps iterate over collections to create multiple resources. |
-| 27                  | A) `local-exec` | The `local-exec` provisioner executes commands on the local machine running Terraform. |
-| 28                  | A) `.tfstate` file | The `.tfstate` file stores Terraform's state data. |
-| 29                  | C) It creates a dependency between resources | `depends_on` ensures that a resource is created before another. |
-| 30                  | C) `resource "aws_instance" { region = "us-west-2" }` | Defines the region for a resource. |
+**Question Number** | **Answer** | **Explanation**  
+---|---|---  
+1 | **B)** It generates nested blocks dynamically. | Dynamic blocks are used to create repeatable configurations for resources based on a collection (list, map, etc.).  
+2 | **C)** `content` | The `content` keyword inside a dynamic block is used to define the structure of the repeated block.  
+3 | **C)** A collection (list or map). | The collection passed to `for_each` is usually a list or map which Terraform iterates over to generate multiple blocks.  
+4 | **B)** The current value in the iteration. | `each.value` represents the value in the collection being iterated over, whether a list or map.  
+5 | **C)** Inside several block types like `resource`, `data`, `provisioner`. | Dynamic blocks are supported inside `resource`, `data`, `provider`, and `provisioner` blocks.  
+6 | **C)** It skips generating the block. | If the collection passed to `for_each` is empty, Terraform doesn't generate any nested blocks for that dynamic block.  
+7 | **B)** `dynamic` | The keyword `dynamic` is used to define dynamic blocks in Terraform.  
+8 | **A)** Yes | You can use dynamic blocks to create dynamic configurations like tags, ingress rules, etc. in AWS resources.  
+9 | **C)** `each.key` | When iterating over a map, `each.key` represents the current key in the iteration.  
+10 | **C)** Repeating `output` values. | Dynamic blocks are not used for `output` blocks, as they are designed for resource blocks or other nested blocks that need to be repeated.  
+11 | **C)** `var.list_of_ports` | To iterate over a list, you would pass a list like `var.list_of_ports` to `for_each` inside a dynamic block.  
+12 | **C)** Inside the `content` block. | `each.value` is valid inside the `content` block and refers to the current value in the iteration.  
+13 | **False** | Dynamic blocks can result in zero blocks being generated if the collection passed to `for_each` is empty.  
+14 | **B)** `aws_security_group` | Dynamic blocks are useful for creating multiple ingress or egress rules inside an AWS security group.  
+15 | **B)** Infrastructure that changes based on input variables. | Dynamic blocks are typically used when the number of repeated blocks is determined by input variables or dynamic data sources.  
+16 | **A)** `dynamic` | `dynamic` is the keyword used to define dynamic blocks in Terraform.  
+17 | **C)** `for_each`, `content`, `BLOCK_TYPE` | These are the three essential components of a dynamic block: the collection to iterate (`for_each`), the nested block (`content`), and the block type being repeated (`BLOCK_TYPE`).  
+18 | **B)** `aws_security_group` | A typical use case of dynamic blocks is to create dynamic ingress rules for a security group resource.  
+19 | **C)** A collection (list or map). | `for_each` in dynamic blocks requires a collection, like a list or map, to iterate over.  
+20 | **C)** The inner block that gets repeated. | `content` is where you define the repeated block structure inside a dynamic block.  
+21 | **True** | You can use dynamic blocks inside other dynamic blocks to create nested repeatable structures.  
+22 | **D)** `lookup(var, "list")` | The `lookup` function can be used to extract values from a map or list for use in dynamic blocks.  
+23 | **A)** Complexity | Overusing dynamic blocks can make the code harder to read and maintain due to its complexity.  
+24 | **C)** `ingress` | In a dynamic block, `ingress` would be the repeated block type for an AWS security group resource.  
+25 | **A)** `each.key` | When iterating over a map, you can use `each.key` to reference the current key in the iteration.  
+26 | **True** | Dynamic blocks can be used in provider blocks, for example, to define multiple provider configurations.  
+27 | **False** | You cannot use `for` loops inside `content {}`; however, `for_each` is used to iterate collections in a dynamic block.  
+28 | **False** | Using dynamic blocks in simple, static configurations should be avoided as it can add unnecessary complexity.  
+29 | **True** | `for_each` can iterate over both lists and maps in a dynamic block.  
+30 | **True** | Dynamic blocks are available in all versions of Terraform, but they were introduced in Terraform 0.12.  
